// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EzHeading should render size 1 with size 700, weight normal 1`] = `
.recipe-1 {
  font-size: 2.2857142857142856rem;
  font-weight: 400;
  margin: 0;
}

<h1
  className="recipe-0 recipe-1 recipe-2"
  size="1"
>
  Heading
</h1>
`;

exports[`EzHeading should render size 2 with size 600, weight normal 1`] = `
.recipe-1 {
  font-size: 1.5rem;
  font-weight: 400;
  margin: 0;
}

<h2
  className="recipe-0 recipe-1 recipe-2"
  size="2"
>
  Heading
</h2>
`;

exports[`EzHeading should render size 3 with size 500, weight bold 1`] = `
.recipe-1 {
  font-size: 1.2857142857142858rem;
  font-weight: 700;
  margin: 0;
}

<h3
  className="recipe-0 recipe-1 recipe-2"
  size="3"
>
  Heading
</h3>
`;

exports[`EzHeading should render size 4 with size 400, weight normal 1`] = `
.recipe-1 {
  font-size: 1.1428571428571428rem;
  font-weight: 400;
  margin: 0;
}

<h4
  className="recipe-0 recipe-1 recipe-2"
  size="4"
>
  Heading
</h4>
`;

exports[`EzHeading should render size 5 with size 300, weight bold 1`] = `
.recipe-1 {
  font-size: 1rem;
  font-weight: 700;
  margin: 0;
}

<h5
  className="recipe-0 recipe-1 recipe-2"
  size="5"
>
  Heading
</h5>
`;

exports[`EzHeading should render size 6 with size 200, weight normal 1`] = `
.recipe-1 {
  font-size: 0.8571428571428571rem;
  font-weight: 400;
  margin: 0;
}

<h6
  className="recipe-0 recipe-1 recipe-2"
  size="6"
>
  Heading
</h6>
`;
